--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "tarea-2",
+  "homepage": "https://elieceroe.github.io/proyecto_2",
+  "name": "proyecto_2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
